syntax = "proto3";

package zeroImpl;

import "acs0.proto";
import "acs1.proto";
import "google/protobuf/timestamp.proto";
import "basic_contract_zero.proto";

option csharp_namespace = "AElf.Contracts.Genesis";

service BasicContractZero {
    option (aelf.csharp_state) = "AElf.Contracts.Genesis.BasicContractZeroState";
    option (aelf.base) = "acs0.proto";
    option (aelf.base) = "acs1.proto";
    option (aelf.base) = "basic_contract_zero.proto";
    
    rpc ChangeContractDeploymentController (acs1.AuthorityInfo) returns (google.protobuf.Empty) {
    }
    rpc ChangeCodeCheckController (acs1.AuthorityInfo) returns (google.protobuf.Empty) {
    }

    rpc GetContractDeploymentController (google.protobuf.Empty) returns (acs1.AuthorityInfo) {
        option (aelf.is_view) = true;
    }
    rpc GetCodeCheckController(google.protobuf.Empty) returns (acs1.AuthorityInfo){
        option (aelf.is_view) = true;
    }
}